# Tiny-Operating-System

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  adc.c  adc.h  arm-toolchain.cmake  boot.S  boot2.S  boot2_padded.S  cmd_parser.c  cmd_parser.h  fs.c  fs.h  gpio.h  i2c.c  i2c.h  interrupts.h  ip.c  ip.h  ipc.c  ipc.h  kernel.c  lcd_i2c.c  lcd_i2c.h  lcd_spi.c  lcd_spi.h  linker.ld  linker_qemu.ld  log.c  log.h  mailbox.c  mailbox.h  main_qemu.c  memory.c  memory.h  pwm.h  rtc.c  rtc.h  run.sh  (+20 more)
.github/workflows/: ci.yml
tests/: CMakeLists.txt  test_ipc.c  test_memory.c  test_scheduler.c
tools/: build_boot2.sh
